jvimalprasathdev/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Co_Borrowers_Zip_Postal_Code__c</fullName>
        <description>This is to specify co-borrower’s zip.</description>
        <label>Co-Borrowers Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Borrower_Current_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Borrower Current Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Borrower_Current_Address_to_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will copy the Borrower address to Subject Address

Wipro Work</description>
        <label>Copy Borrower Current Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Borrowers_Home_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Borrowers Home Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Timestamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Credit Score</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Mortgage_Balance__c</fullName>
        <description>This is to specify the mortgage balance in dollars</description>
        <label>Current Mortgage Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <description>sprint 6</description>
        <label>Current Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to specify if the customer does not want to be called.</description>
        <inlineHelpText>Check it if Customer does not wish to be called</inlineHelpText>
        <label>Do not call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DU_Response__c</fullName>
        <label>DU Response</label>
        <picklist>
            <picklistValues>
                <fullName>Approved/Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Bank Region</label>
        <picklist>
            <picklistValues>
                <fullName>Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South-Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North-East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_RB_Provide_A_Quality_Referral__c</fullName>
        <label>Did The RB Provide A Quality Referral?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_360__c</fullName>
        <externalId>true</externalId>
        <label>Direct 360 EID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Divorce_Separation_decree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Divorce/Separation decree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_You_Have_A_Purchase_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do You Have A Purchase Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_want_to_keep_your_2nd_mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you want to keep your 2nd mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Deadline__c</fullName>
        <label>Document Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documentation_of_credit_dispute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation of credit dispute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_for_Non_US_Citizens__c</fullName>
        <label>Documents for Non-US Citizens:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_s_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver&apos;s License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sent_History__c</fullName>
        <description>Wipro Work

Track the Emails sent by the Mortgage consultant</description>
        <label>Email Sent History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Empower_Lead_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the lead number from Empower. In this phase, this lead number will be entered manually in Sales Force. This is both unique (the letters “ABC” are treated differently as “abc”) and External ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>Source Lead Number from Empower</inlineHelpText>
        <label>OPUS ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Estimated_property_value__c</fullName>
        <label>Estimated property value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Second_Mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Second Mortgage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>Direct Portal External ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financed_Properties_Amount__c</fullName>
        <description>How many properties do you currently own that are financed?</description>
        <inlineHelpText>How many properties do you currently own that are financed?</inlineHelpText>
        <label>Number of Current Financed Properties?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 or More</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foreclosure_Years_Ago__c</fullName>
        <label>Foreclosure Years Ago</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HLR_Flag__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>HLR Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HLR_Lead_ID__c</fullName>
        <label>HLR Lead ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUD_1_Settlement_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HUD-1 Settlement Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeowner_s_Condo_association__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeowner&apos;s/Condo association</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeowner_s_insurance_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeowner&apos;s insurance policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_As_New__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;New&quot;),((NOW()-CreatedDate)*24),((Active_Timestamp__c-CreatedDate)*24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours As New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Would_you_Describe_Your_Credit__c</fullName>
        <label>Your estimated credit score</label>
        <picklist>
            <picklistValues>
                <fullName>740-800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>720-739</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700-719</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>680-699</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>660-679</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>580-659</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 580</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 660</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_Other__c</fullName>
        <label>How did you hear - Other</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us_Code__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <controllingField>How_did_you_hear_about_us__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad in my Credit Card or Bank Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner Ad on the Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone call from Capital One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising in the Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio or TV Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper or Magazine Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends or Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISN__c</fullName>
        <description>account setting</description>
        <label>ISN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_ll_Contact_You__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I’ll Contact You</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Key__c</fullName>
        <description>Import Key used during Campaign lead import</description>
        <label>Import Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_OPUS_ID__c</fullName>
        <externalId>true</externalId>
        <label>Initial OPUS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intened_use_of_Cash_Out_funds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intened use of &quot;Cash Out&quot; funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Referral_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referral Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Referral__c</fullName>
        <label>Internal Referral</label>
        <picklist>
            <picklistValues>
                <fullName>MC Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HESC Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Irrevocable_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Irrevocable Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Notify it its a Duplicate Lead</description>
        <label>IsDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sofi_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sofi Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_assigned_already__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is assigned already</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_property_under_construction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the property under construction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_your_home_under_major_renovation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is your home under major renovation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JntApplicnt_Had_Bankruptcy_HwMnyYrsAgo__c</fullName>
        <label>JntApplicnt Had Bankruptcy HwMnyYrsAgo</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jnt_Applcnt_Had_Foreclosure_In_Lst_7yrs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jnt Applcnt Had Foreclosure In Lst 7yrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_Had_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Applicant Had Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_Self_Employed_Since__c</fullName>
        <label>Joint Applicant Self-Employed Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Applicant Self-Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The leads can be English or Spanish leads. This field will be used to specify if the lead is English or Spanish.</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Agg_Form_Ver__c</fullName>
        <label>Lead Agg Form Ver</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Branch_Name__c</fullName>
        <description>Branch where the lead was created.</description>
        <label>Lead Branch Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_District__c</fullName>
        <description>Disctrict where the lead is created.</description>
        <label>Lead District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_EID__c</fullName>
        <label>Lead Owner EID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Queue__c</fullName>
        <label>Lead Owner Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Role_RR__c</fullName>
        <description>Created only to resolve the RoundRobin Issue</description>
        <label>Lead Owner Role RR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner that needs to be assigned to the lead when lead is created

Wipro work</description>
        <label>Salesforce Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <formula>if( Total_Lead_Score__c &lt;30,&apos;C&apos;,if(Total_Lead_Score__c &lt;50, &apos;B&apos;, &apos;A&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Region__c</fullName>
        <description>Region where the lead is created</description>
        <label>Lead Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <description>Picklist with three values: My Leads, My Sofi Leads, My Loans, that Lead Status is dependent on.</description>
        <label>Lead Stage</label>
        <picklist>
            <picklistValues>
                <fullName>My Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Sofi Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Code__c</fullName>
        <label>Lead Status Code</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>103</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limit_on_your_home_equity_line__c</fullName>
        <description>Limit on your home equity line</description>
        <inlineHelpText>What is the limit on your home equity line</inlineHelpText>
        <label>Limit on your home equity line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoanTerm__c</fullName>
        <label>Loan Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Amount1__c</fullName>
        <label>Loan Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Category__c</fullName>
        <description>Loan Amounts catergorized by size</description>
        <formula>IF(AND( Requested_Loan_Amount__c &lt;= 75000 ), &quot;&lt; 75K&quot;, 
IF(AND( Requested_Loan_Amount__c &gt; 75000, Requested_Loan_Amount__c &lt;= 100000 ), &quot;75K - 100K&quot;, 
IF(AND( Requested_Loan_Amount__c &gt; 100000,Requested_Loan_Amount__c &lt;= 150000), &quot;100K - 150K&quot;, 
IF(AND( Requested_Loan_Amount__c &gt; 150000,Requested_Loan_Amount__c &lt;= 250000 ), &quot;150K - 250K&quot;,&quot;&gt; 250K&quot;
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Amount Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <description>sprint 4
wipro</description>
        <label>Loan Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Interest__c</fullName>
        <label>Loan Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <label>Loan Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose_Code__c</fullName>
        <label>Loan Purpose code</label>
        <picklist>
            <controllingField>Loan_Purpose__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <description>This is to specify the loan purpose of the lead. The values in the pick list will change dynamically based on “Loan Type” selection above.</description>
        <label>Loan Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash-out Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate &amp; Term Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEL - 1st Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEL - 2nd Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELOC - 1st Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELOC - 2nd Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Source_Code__c</fullName>
        <label>Loan Source Code</label>
        <picklist>
            <controllingField>Loan_Source__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Source__c</fullName>
        <label>Loan Source</label>
        <picklist>
            <picklistValues>
                <fullName>Flyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realtor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Portal - Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Portal - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB Portal - Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB Portal - NCFR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Loan Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <label>Loan Term</label>
        <picklist>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_To_Value__c</fullName>
        <formula>if( and( Requested_Loan_Amount__c &gt; 0, Value_of_Home__c &gt; 0 ), Requested_Loan_Amount__c /  Value_of_Home__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan-To-Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Type_Code__c</fullName>
        <label>Loan Type Code</label>
        <picklist>
            <controllingField>Loan_Type__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <description>This is to specify the loan type of the lead.</description>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Update_Date__c</fullName>
        <label>Loan#_Update_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Holding_Assignment_Date__c</fullName>
        <label>MSA Holding Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Made_Payable_To__c</fullName>
        <label>Made Payable To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mesg__c</fullName>
        <label>Mesg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Rental_Income__c</fullName>
        <description>How much rental income do you expect to receive for this property on a monthly basis?</description>
        <inlineHelpText>How much rental income do you expect to receive for this property on a monthly basis?</inlineHelpText>
        <label>Monthly Rental Income?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_payment_on_your_1st_mortgage__c</fullName>
        <description>Monthly payment on your 1st mortgage</description>
        <inlineHelpText>How much is your monthly payment on your 1st mortgage</inlineHelpText>
        <label>Monthly payment on your 1st mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortech_Prospect_ID__c</fullName>
        <label>Mortech Prospect ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortech_Tracking_ID__c</fullName>
        <label>Mortech Tracking ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Consultant_EID__c</fullName>
        <label>Mortgage Consultant EID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Consultant_Name__c</fullName>
        <label>Mortgage Consultant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Consultant_Name_formula__c</fullName>
        <formula>Lead_Owner__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Consultant Name formula</label>
        <type>Text</type>
    </fields>
</CustomObject>